k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cricket-feedback
  labels:
    name: cricket-feedback
